# ft_mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
ft_mcp/: __main__.py  log.py
ft_mcp/router/: dispatch.py  errors.py  lifecycle.py
ft_mcp/tools/: file_hash.py  prompts.py  registry.py  system_time.py  telemetry.py
ft_mcp/transport/: http.py  stdio.py
tests/: test_protocol.py
