[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_mcp"
version = "1.0.0"
description = "A spec-compliant Model Context Protocol (MCP) server implemented from scratch in pure Python — no SDK."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ali Eissa" }]
keywords = ["mcp", "model-context-protocol", "json-rpc", "asyncio", "llm", "agentic-ai", "stdio"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
# The stdio server core has ZERO runtime dependencies: it uses only the
# Python standard library (asyncio, json, sys, logging, hashlib, ...).
dependencies = []

[project.optional-dependencies]
# The optional Streamable-HTTP + SSE transport (`ft_mcp --http`) needs aiohttp.
http = ["aiohttp>=3.9"]
dev = ["pytest>=7.0"]

[project.scripts]
ft_mcp = "ft_mcp.__main__:entry"

[project.urls]
Homepage = "https://github.com/alsaeed3/ft_mcp"
Repository = "https://github.com/alsaeed3/ft_mcp"

[tool.setuptools.packages.find]
include = ["ft_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
